refactor(website/setup.mdx): change ESBuild to esbuild in docs
This commit changes the capitalization of "ESBuild" to "esbuild" in the
setup.mdx document. This change is made to match the official casing of
the esbuild project.

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -75,7 +75,7 @@ If you are using a non-standard TypeScript compiler such as the following, you w
 
   - Non-standard TypeScript Compilers
     - [SWC](https://swc.rs)
-    - [ESBuild](https://esbuild.github.io/)
+    - [esbuild](https://esbuild.github.io/)
     - [Babel](https://babeljs.io/)
 
 ## Transformation
@@ -310,7 +310,7 @@ If you are using a non-standard TypeScript compiler such as the following, you w
 
   - Non-standard TypeScript compilers:
     - [SWC](https://swc.rs/) in Next.JS
-    - [ESBuild](https://esbuild.github.io/) in Vite
+    - [esbuild](https://esbuild.github.io/) in Vite
     - [Babel](https://babeljs.io/) in Create-React-App
 
 Instead you should utilise the generation mode. 
