refactor(webxite/setup.mdx): change Webpack to webpack in docs
This commit changes the casing of 'Webpack' to 'webpack' in the
documentation. This is to adhere to the official casing of the
webpack project.

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -417,7 +417,7 @@ export default defineConfig({
 
 
 
-## Webpack
+## webpack
 <Tabs items={['npm', 'pnpm', 'yarn']}>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
