--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -31,7 +31,7 @@ yarn typia setup --manager yarn
 
 If you're using standard TypeScript compiler, you can use [transform mode](#transformation).
 
-Assuming you are using [transformation mode] simply run `npx typia setup` which will provide sane defaults.
+Assuming you are using [transformation mode](#transformation) simply run `npx typia setup` which will provide sane defaults.
 
   - Standard TypeScript Compiler: [Microsoft/TypeScript](https://github.com/microsoft/typescript)
 
