feat(setup.mdx): update options comment
The comment for the options parameter in the unTypiaNext function
has been updated to reflect that it's for 'unplugin-typia' instead of
'typia'.

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -289,7 +289,7 @@ const config = {
 };
 export default unTypiaNext(
   config,
-  {} // options of typia
+  {} // options of unplugin-typia
 );
 ```
   </Tab>
