feat(docs): Update code snippet in hono.mdx
The code snippet in the hono.mdx document has been updated to
reflect the correct line numbers for the TypeScript example.
This change will help users to understand the code better.

--- a/website/pages/docs/utilization/hono.mdx
+++ b/website/pages/docs/utilization/hono.mdx
@@ -3,7 +3,7 @@
 If you are using `Hono` with `typia`, you can use [ `@hono/typia-validator` ](https://github.com/honojs/middleware/tree/main/packages/typia-validator) to validate the request body.
 
 
-```typescript copy showLineNumbers {11-12}
+```typescript copy showLineNumbers {7, 8, 13}
 import { Hono } from "hono";
 import { typiaValidator } from '@hono/typia-validator'
 import typia, { type tags } from "typia";
