--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -297,7 +297,7 @@ After that, follow the next section steps to integrate `unplugin-typia` into you
 
 For reference, there are a couple of ways to integrate `unplugin-typia` into your bundlers. For the full integration guide, please refer to the [`unplugin-typia` documentation](https://jsr.io/@ryoppippi/unplugin-typia/doc). Also, you can see the examples projects in [`unplugin-typia` repository](https://github.com/ryoppippi/unplugin-typia).
 
-<Tabs items={['Vite', 'Next.js', 'esbuild', 'Bun.runtime', 'Bun.Build']}>
+<Tabs items={['Vite', 'Next.js', 'esbuild', 'Bun.runtime', 'Bun.build']}>
   <Tab>
 ```typescript filename="vite.config.ts" copy showLineNumbers
 import UnpluginTypia from '@ryoppippi/unplugin-typia/vite'
