Revise sponsors chapter

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -23,4 +23,7 @@ Thanks for your support.
 
 Your donation would encourage `typia` development.
 
+  - [@nonara](https://github.com/nonara): developer of [`ts-patch`](https://github.com/nonara/ts-patch)
+  - [@ryoppippi](https://github.com/ryoppippi): developer of [`unplugin-typia`](https://github.com/ryoppippi/unplugin-typia)
+
 [![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
