--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -21,9 +21,11 @@ import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 ## Sponsors
 Thanks for your support.
 
-Your donation would encourage `typia` development.
+Your donation encourages `typia` development.
 
-  - [@nonara](https://github.com/nonara): developer of [`ts-patch`](https://github.com/nonara/ts-patch)
-  - [@ryoppippi](https://github.com/ryoppippi): developer of [`unplugin-typia`](https://github.com/ryoppippi/unplugin-typia)
+Also, `typia` is re-distributing half of donations to core contributors of `typia`.
 
-[![Sponsors](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
+  - [`nonara/ts-patch`](https://github.com/nonara/ts-patch)
+  - [`ryoppippi/unplugin-typia`](https://github.com/ryoppippi/unplugin-typia)
+
+[![Sponsers](https://opencollective.com/typia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/typia)
