docs(setup.mdx): Correct setup command for unplugin-typia with Bun

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -284,7 +284,7 @@ yarn typia setup --manager yarn
   </Tab>
   <Tab>
 ```bash filename="Terminal" showLineNumbers copy
-bun add @ryoppippi/unplugin-typia
+bunx jsr add @ryoppippi/unplugin-typia
 bun add typia
 bun typia setup
 ```
